[package]
name = "hydra-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
hydra = { version = "0.1.26", features = ["console"] }
serde = { version = "1.0.203", features = ["derive"] }
serde-value = "0.7.0"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["net"] }
